[package]
name = "task_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
thiserror = "1"
anyhow = "1"

log = "0.4"
fern = { version = "0.6", features = ["colored"] }

regex = "1"
lazy_static = "1"
