[package]
name = "instruct"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["automation", "interpreter", "dsl", "language", "make"]
categories = ["command-line-utilities", "compilers", "development-tools"]
description = "A language to write general purpose 'makefile like' tasks which are powerful and reuseable"
homepage = "https://github.com/manuel2258/instruct"
repository = "https://github.com/manuel2258/instruct"
readme = "README.md"

[lib]
name = "instruct"
path = "src/lib.rs"

[[bin]]
name = "inst"
path = "src/main.rs"

[dependencies]
nom = "7"
thiserror = "1"
anyhow = "1"

log = "0.4"
fern = { version = "0.6", features = ["colored"] }

regex = "1"
lazy_static = "1"

figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "=1.0.136", features = ["derive"] }
clap = { version = "3", features = ["derive"] }

crossbeam-channel = "0.5"